# shh-copy-id

./: .gitignore  README.md  install.ps1  pyproject.toml
.github/workflows/: build-and-release.yml
src/ssh_copy_id/: main.py  version.py
