[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ssh-copy-id"
version = "0.1.0"
description = "ssh-copy-id clone implemented in Python, works on Windows"
readme = "README.md"
requires-python = ">=3.8"
authors = [
    { name = "Dawid Konrad Kohnke", email = "dawid.kohnke.cad@gmail.com" }
]

dependencies = []

[project.optional-dependencies]
dev = ["pyinstaller"]

[tool.hatch.build.targets.wheel]
packages = ["src/ssh_copy_id"]