[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ssh-copy-id"
version = "0.1.15"
description = "Windows alternative for ssh-copy-id"
readme = "README.md"
requires-python = ">=3.8"
authors = [
    { name = "Dawid Konrad Kohnke", email = "dawid.kohnke.cad@gmail.com" }
]
dependencies = []

[dependency-groups]
dev = ["pyinstaller"]

[tool.hatch.build.targets.wheel]
packages = ["src/ssh_copy_id"]

[tool.uv.sources]
ssh_copy_id = { path = "src/ssh_copy_id", editable = true }

[project.scripts]
ssh-copy-id = "ssh_copy_id.main:main"